# everytime

./: README.md  pyproject.toml
.github/workflows/: flake8.yml
everytime/: __init__.py  example.py
src/: every.py
